--- a/README
+++ b/README
@@ -3,3 +3,7 @@ strings. I'm even more annoyed by the fact that a simple search for
 "binary grep" doesn't yield a tool which could do that. So I wrote one.
 
 Feel free to modify, branch, fork, improve. Re-licenses as BSD.
+
+To install:
+
+curl 'https://github.com/tmbinc/bgrep/raw/master/bgrep.c' | gcc -O2 -x c -o /usr/local/bin/bgrep -
